@@ -1,0 +1,10 @@
+<html>
+<head>
+<div>
+Plugin test within an iframe:
+</div>
+<div style="float:right;">
+<IFRAME SRC="qtplugin.html" FRAMEBORDER="0" width="100%" height="100%" ></IFRAME>
+ </div>
+</body>
+</html>
