@@ -1,0 +1,17 @@
+<html>
+<body>
+Image:<br/>
+ <img src="http://labs.trolltech.com/skins/trolltech_labs/categories/internet.png" width="80" height="80"/>
+ <br/>
+QT progress bar:
+<br/>
+<object type="application/x-qt-plugin" classid="QProgressBar" name="progressbar" height=30></object>
+<script>
+function display(){
+ if (++document.progressbar.value != 100)
+setTimeout("display()", 50)
+}
+display();
+</script>
+</body>
+</html>
