@@ -1,3 +1,12 @@
+2008-04-28  Holger Hans Peter Freyther  <zecke@selfish.org>
+
+        Reviewed by Simon.
+
+        Add manual test to test placement of QWidgets in iframe's
+
+        * manual-tests/qt/main.html: Added.
+        * manual-tests/qt/qtplugin.html: Added.
+
 2008-04-28  Simon Hausmann  <hausmann@webkit.org>
 
         Fix the build with ENABLE_DATABASE=0 (Qt/Windows) by including
